# AgriSight

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  dockerfile  makefile  package-lock.json  requirements.txt
app/: db.py  main.py  routes.py  worker.py
app/static/js/: main.js
app/templates/: index.html
backend/: db.py  main.py  pyproject.toml  requirements.txt  routes.py  worker.py
backend/static/js/: main.js
data/: Gzu9S5FL-Ug_trimmed_subtitles.vtt  UibfDUPJAEU_trimmed_subtitles.srt  UibfDUPJAEU_trimmed_subtitles.vtt  subtitles.db  subtitles_trimmed.srt
docker/: backend.dockerfile  frontend.dockerfile  summary_server.dockerfile
docs/: README_v1.0_kr.md  README_v2.0_kr.md  debug_notes.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: VideoPlayer.tsx  fileSelect.tsx  videoPlayer.css
frontend/src/lib/: api.ts
inference/summary_server/: Dockerfile  app.py  requirements.txt  summary_model.py
scripts/: add_sub.py  create_db.py  download_n_cut_vid.py  download_vid.py  gen_sub_n_save.py  generate_n_save_sub.py
sql/: 2025-04-19-add-fk-video_id.sql
